fixed alignment

--- a/src/styles/componentStyles/footer.module.scss
+++ b/src/styles/componentStyles/footer.module.scss
@@ -7,12 +7,11 @@
     color: white;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: center;
     padding-bottom: 25px;
 }
 
 .title {
-    padding-left: 25px;
     h1 {
         font-family: 'Lato', sans-serif;
         margin: 0;
@@ -31,7 +30,6 @@
     a{
         text-decoration: none;
     }
-    margin-right: 25px;
     h1 {
         font-family: "Lato", sans-serif;
         font-size: 25px;
@@ -66,6 +64,16 @@
 
 }
 
+.inner{
+    width: 1200px;
+    background: black;
+    color: white;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding-bottom: 25px;
+}
+
 .icons {
     padding-top: 15px;
     list-style-type: none;
@@ -97,7 +105,7 @@
         margin: 0;
     }
 
-    .footer {
+    .inner {
         justify-content: center;
     }
 }
