--- a/src/styles/componentStyles/header.module.scss
+++ b/src/styles/componentStyles/header.module.scss
@@ -3,7 +3,6 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
 .header {
     padding: 0.2rem 0 0rem;
-    background: white;
     margin: 0;
     display: flex;
     flex-direction: row;
@@ -11,12 +10,13 @@
     align-items: center;
     flex-wrap: wrap;
     z-index: 3;
+    max-width: 1200px;
+    width: 100%;
     background-color: #F7F7F7;
 }
 
 .name {
     text-align: left;
-    padding-left: 25px;
 }
 
 .title {
@@ -32,7 +32,6 @@
     justify-content: center;
     list-style-type: none;
     margin: 0;
-    padding-right: 25px;
 }
 
 
@@ -117,11 +116,14 @@
   }
 
   .large-menu-classname{
-      background-color: white;
-      position: fixed;
-      width: 100vw;
-      top: 0px;
-      z-index: 5;
+    position: fixed;
+    width: 100vw;
+    top: 0px;
+    z-index: 5;
+    display: flex;
+    justify-content: center;
+    padding: 0.2rem 0 0rem;
+    background-color: #F7F7F7;
   }
 
   .menu-wrap{
@@ -155,5 +157,15 @@
 
       .name{
           display: none;
+      }
+
+      .large-menu-classname{
+          display: none;
+      }
+  }
+
+  @media only screen and (max-width: 1200px) {
+      .title{
+          padding-left: 25px;
       }
   }
